Fixed display on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -633,7 +633,7 @@ a:hover {
 .card__image img {
 	width: 100%;
 	height: 265px;
-	object-fit: cover;    
+	object-fit: fill;    
 }
 
 .card-holder {
@@ -697,9 +697,9 @@ a:hover {
 	margin-right: 10px;
 	border-radius: 5px;
 	color: white;
-	position: absolute;
-	bottom: -30px;
-	left: 50px;
+	position: relative;
+	bottom: -45px;
+	left: 0px;
 	margin: auto;
 	line-height: 40px;
 	font-size: 20px;
@@ -780,7 +780,7 @@ a:hover {
 @media (min-width: 320px) {
 
 	.cards {
-		grid-template-columns: repeat(1, 300px);
+		grid-template-columns: repeat(1, 100%);
 		padding-top: 80px;
 	}
 }
